# cprobid

./: .gitignore  .gitignore.back  CMakeLists.txt  README.md  angular.json  build.sbt  nx.json  package-lock.json  package.json
apps/backend/backend/: jest.config.js
apps/backend/backend/src/: main.ts
apps/msms-pipeline/: jest.config.js  tslint.json
apps/msms-pipeline-e2e/: cypress.json
apps/msms-pipeline-e2e/src/integration/: app.spec.ts
apps/msms-pipeline/src/: index.html  styles.scss
apps/msms-pipeline/src/app/: account.service.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  auth-guard.guard.ts  jwt-token.interceptor.ts
apps/msms-pipeline/src/app/msms-experiments/: msms-experiments.component.html  msms-experiments.component.spec.ts  msms-experiments.component.ts
apps/msms-pipeline/src/app/nav-bar/: nav-bar.component.html  nav-bar.component.ts
apps/msms-pipeline/src/app/page-not-found-component/: page-not-found-component.component.ts
apps/msms-pipeline/src/app/signin/: signin.component.html  signin.component.ts
apps/msms-pipeline/src/app/signup/: signup.component.html  signup.component.ts
backend/: .gitignore  Gemfile
backend/app/controllers/: ms_ms_experiments_controller.rb
backend/app/models/: ms_ms_experiment.rb  user.rb
backend/config/: credentials.yml.enc  mongoid.yml  routes.rb
backend/config/environments/: development.rb
backend/config/initializers/: devise.rb
cmake/: BoostTestHelpers.cmake  FindLIBPQXX.cmake
msms/: CMakeLists.txt
msms/src/: Ion.cpp  Ion.h
msms/tests/: test_cid.cpp
mzxml-reader/: CMakeLists.txt
mzxml-reader/src/: MzXMLEvent.h  MzXmlInstrument.h  MzXmlIon.h  MzXmlParentFile.h  MzXmlPrecursorIon.h  MzXmlReader.cpp  MzXmlReader.h  base64.c
mzxml-reader/tests/: test_read.cpp
probeid/: CMakeLists.txt
probeid/src/: amino_acid_sequence.cpp  amino_acid_sequence_fragment.h  chemical_element.h  dictionary.cpp  dictionary.h  dictionary_amino_acid_modification.h  experimental_ion.cpp  ion.cpp  main.cpp
probid/: CMakeLists.txt
probid/src/: README  amino_acid.cpp  immonium_ion.h  immonium_ion_cod.cpp  main.cpp  protein.cpp  protein_database.cpp
project/.bloop/: cprobid-build.json
protein/: CMakeLists.txt
protein/src/: AminoAcid.cpp  AminoAcid.h  AminoAcidSeq.cpp  AminoAcidSeq.h  protein.cpp  protein.h
protein/tests/: test_amino_acid.cpp  test_amino_acid_seq.cpp
read-fasta/: CMakeLists.txt
read-fasta/src/: main.cpp
read-swissprot/: CMakeLists.txt
read-swissprot/src/: main.cpp
src/: MzXmlReader.cpp  MzXmlReader.h  amino_acid.h  amino_acid_sequence.h  amino_acid_sequence_fragment.cpp  chemical_element.cpp  config.h.in  cprobid.param  dictionary_amino_acid.cpp  dictionary_amino_acid.h  dictionary_amino_acid_modification.cpp  dta_sax_handler.cpp  dta_sax_handler.h  experimental_ion.h  immonium_ion.cpp  immonium_ion_cod.h  ion.h  match_score.h  msms_run.cpp  msms_run.h  precursor_ion.cpp  precursor_ion.h  protein.h  protein_database.h  sax_xml_data_handler.cpp  sax_xml_data_handler.h  search_parameters.cpp  search_parameters.h
src/main/resources/: reference.conf
src/main/scala/com/biosystechnologies/chemical/: ChemicalElement.scala
src/main/scala/com/biosystechnologies/enzymes/: Trypsin.scala
src/main/scala/com/biosystechnologies/ms/scores/: MsMsPipelineParams.scala  MsMsPipelineScores.scala  MsScore.scala
src/main/scala/com/biosystechnologies/msms/: CIDProduct.scala  ExperimentalIon.scala  ExperimentalPrecursorIon.scala  Ion.scala  IonScan.scala  MsMsMatcher.scala  MzXmlParser.scala  MzXmlScan.scala  TheoreticalIon.scala
src/main/scala/com/biosystechnologies/peptides/: AminoAcid.scala  AminoAcidCod.scala  AminoAcidModification.scala  AminoAcidSeq.scala  AminoAcidSeqModification.scala  AminoAcidSequence.scala  CIDFragments.scala  CIDProduct.scala  ImmoniumCod.scala  ImmoniumIon.scala  PeptideIon.scala
src/main/scala/com/biosystechnologies/swissprot/: DbReference.scala  Entry.scala  Organism.scala  OrganismName.scala  Protein.scala  ProteinName.scala  Sequence.scala  SwissProt.scala  SwissProtEntries.scala  UploadSwissProt.scala
src/test/scala/com/biosystechnologies/enzymes/: TrypsinTest.scala
src/test/scala/com/biosystechnologies/msms/: MzXmlParserTest.scala
src/test/scala/com/biosystechnologies/peptides/: AminoAcidSeqTest.scala
src/test/scala/com/biosystechnologies/swissprot/: SwissProtEntriesTest.scala  SwissProtTest.scala
swissprot/: CMakeLists.txt
swissprot/src/: digest-swissprot.cpp  do.h  generate-precursors.cpp  parser.cpp  parser.h  reader.cpp  reader.h  swissprot.h
swissprot/tests/: test_parser.cpp
